--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ geoalchemy2==0.8.4
 coloredlogs==14.0
 pandas==1.0.4
 geopandas==0.7.0
-psycopg2==2.8.5
 coloredlogs==14.0
 progressbar2==3.51.3
 matplotlib==3.2.2
@@ -11,4 +10,5 @@ utm==0.5.0
 jupyterlab==2.1.5
 descartes==1.1.0
 snowmicropyn==1.0.1
-
+psycopg2-binary==2.8.5
+pandoc==1.0.2
