--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-geoalchemy2==0.8.4
 coloredlogs==14.0
-pandas==1.0.4
-geopandas==0.7.0
+pandas==1.2.4
 coloredlogs==14.0
 progressbar2==3.51.3
 matplotlib==3.2.2
@@ -9,9 +7,11 @@ rasterio==1.1.5
 utm==0.5.0
 jupyterlab==2.1.5
 descartes==1.1.0
-snowmicropyn==1.0.1
-psycopg2-binary==2.8.5
 pandoc==1.0.2
 nbsphinx==0.7.1
 sphinx-gallery==0.7.0
 nbconvert==6.0.6
+geoalchemy2
+geopandas>=0.7
+snowmicropyn
+psycopg2-binary
