--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-coloredlogs==14.0
-pandas==1.2.4
-coloredlogs==14.0
-progressbar2==3.51.3
-matplotlib==3.2.2
-rasterio==1.1.5
-utm==0.5.0
-jupyterlab==2.1.5
-descartes==1.1.0
-pandoc==1.0.2
-nbsphinx==0.7.1
-sphinx-gallery==0.7.0
-nbconvert==6.0.6
-geoalchemy2
-geopandas>=0.7
-snowmicropyn
-psycopg2-binary
+coloredlogs>=14.0
+progressbar2>=3.51.3
+utm>=0.5.0,<1.0
+geoalchemy2>=0.6,<1.0
+geopandas>=0.7,<1.0
+psycopg2>=2.8.6
+rasterio>=1.1.5
