--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -11,3 +11,9 @@ pytest==6.2.3
 pytest-runner==5.1
 nbsphinx==0.7.1
 sphinx-gallery==0.7.0
+nbconvert==6.0.6
+snowmicropyn
+pandoc==1.0.2
+jupyterlab==2.1.5
+matplotlib==3.2.2
+psycopg2-binary
