Adding in the package install to rtd for API building. Working on #25

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,3 +8,5 @@
     version: 3.8
     install:
       - requirements: docs/requirements.txt
+      - requirements: requirements.txt
+      - method: setuptools
