--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,6 +1,15 @@
 
 name: snowexsql
-on: [push, pull_request]
+
+# Controls when the action will run.
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ master, adding_ci_#25 ]
+  pull_request:
+    branches: [ master ]
+
+  workflow_dispatch:
 
 jobs:
   build:
