1. Added a docker compose file to best simulate the testing on gh locally. 2. Added more python versions to our gh testing 3. Removed my testing branch from the workflow as it is working now. 4. Updated the setup.py to require 3.6 +

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ name: snowexsql
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, adding_ci_#25 ]
-  pull_request:
     branches: [ master ]
 
   workflow_dispatch:
@@ -17,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     services:
 
