Working towards standardizing the local db and the hackweek db. This required adding a credentials to avoid having too many uncommitted changes in the scripts, working on #29. This is because RTD was throwing an error on interpretting the jupyter hub. To fix this we needed to rerun the notebook which wasnt working locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
   postgres:
     image: kartoza/postgis:13-3.1
     environment:
-      POSTGRES_PASSWORD: snowex_testing
-      POSTGRES_USER: snowex_tester
+      POSTGRES_PASSWORD: builder
+      POSTGRES_USER: db_builder
       POSTGRES_DB: test
       TZ: 'US/Mountain'
       PGTZ: 'US/Mountain'
