--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       postgis:
         image: kartoza/postgis:13-3.1
         env:
-          POSTGRES_PASSWORD: snowex_testing
-          POSTGRES_USER: snowex_tester
+          POSTGRES_PASSWORD: builder
+          POSTGRES_USER: db_builder
           POSTGRES_DB: test
 
         ports:
