Some minor confusion on my credentials

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       postgis:
         image: kartoza/postgis:13-3.1
         env:
-          POSTGRES_PASSWORD: builder
-          POSTGRES_USER: db_builder
+          POSTGRES_PASSWORD: db_builder
+          POSTGRES_USER: builder
           POSTGRES_DB: test
 
         ports:
