--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgis
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
