Updated the camera trap instrument name to camera along with examples and docs. Also attempting to update the coverage badge to not be a jest logo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,6 @@ jobs:
           auth: ${{ secrets.GIST_SECRET }}
           gistID: 2034019acc40a963bd02d2fcbb31c5a9
           filename: snowexsql__${{ env.BRANCH }}.json
-          label: Test Coverage
+          label: Coverage
           message: ${{ env.COVERAGE }}
           color: green
-          namedLogo: jest
