--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ progressbar2>=3.51.3
 utm>=0.5.0,<1.0
 geoalchemy2>=0.6,<1.0
 geopandas>=0.7,<1.0
-psycopg2>=2.8.6
+psycopg2-binary>=2.9.0,<2.10.0
 rasterio>=1.1.5
