--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
+
+        - if: ${{ matrix.os == 'windows-latest'}}
+          name: Install Windows dependencies
+          run: |
+            pip install --upgrade pip setuptools wheel
+            python -m pip install GDAL>=1.1.0
+            python -m pip install -r requirements.txt
+            python setup.py install
+
+        - if: ${{ matrix.os != 'windows-latest'}}
+          name: Install Macos/Linux dependencies
+          run: |
             pip install --upgrade pip setuptools wheel
             python -m pip install -r requirements.txt
             python setup.py install
