--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
@@ -24,15 +24,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - if: ${{ matrix.os == 'windows-latest'}}
-        name: Install Windows dependencies
-        run: |
-            pip install --upgrade pip setuptools wheel
-            python -m pip install GDAL>=1.1.0
-            python -m pip install -r requirements.txt
-            python setup.py install
-      - if: ${{ matrix.os != 'windows-latest'}}
-        name: Install Macos/Linux dependencies
+
+      - name: Install Macos/Linux dependencies
         run: |
             pip install --upgrade pip setuptools wheel
             python -m pip install -r requirements.txt
