--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 
-name: snowexsql
+name: snowexsql testing
 
 # Controls when the action will run.
 on:
@@ -12,7 +12,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -50,7 +49,7 @@ jobs:
           pytest -s
 
       # Run coverage only once
-      - if: ${{ matrix.python-version == '3.9' }}
+      - if: ${{ matrix.python-version == '3.9'}}
         name: Get Coverage for badge
         run: |
           # Run coverage save the results
@@ -74,7 +73,7 @@ jobs:
           # process.env.BRANCH = 'pull_27';
           echo "BRANCH=$(echo ${BRANCH_NAME})" >> $GITHUB_ENV
 
-      - if: ${{ matrix.python-version == '3.9' }}
+      - if: ${{ matrix.python-version == '3.9'}}
         name: Create the Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
         with:
