COG handler can do local or S3 storage and communicate that to the DB. Need to share storage with docker-db for testing to work with local stored files so we can at least test the out-db storage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ version: '2.1'
 services:
 
   postgres:
-    image: kartoza/postgis:13-3.1
+    image: kartoza/postgis:14-3.2
     environment:
       POSTGRES_PASSWORD: 'db_builder'
       POSTGRES_USER: 'builder'
       POSTGRES_DB: 'test'
+      POSTGIS_GDAL_ENABLED_DRIVERS: 'ENABLE_ALL'
+      POSTGIS_ENABLE_OUTDB_RASTERS: 'True'
       TZ: 'US/Mountain'
       PGTZ: 'US/Mountain'
     ports:
