#65 - add docker and github pipeline mount locations to allow local out_db COGs for testing. Clean up code. Add some doc strings

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,12 @@ jobs:
           POSTGRES_DB: test
           TZ: 'US/Mountain'
           PGTZ: 'US/Mountain'
-
+          POSTGIS_GDAL_ENABLED_DRIVERS: 'ENABLE_ALL'
+          POSTGIS_ENABLE_OUTDB_RASTERS: 'True'
         ports:
           - 5432:5432
+        volumes:
+          - $PWD/:$PWD/
 
     steps:
       - uses: actions/checkout@v2
