--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         ports:
           - 5432:5432
         volumes:
-          - $PWD/:$PWD/
+          - $(pwd):$(pwd)
 
     steps:
       - uses: actions/checkout@v2
