--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          sudo apt-get update
+          sudo apt-get update gdal-bin
           sudo apt-get install -y postgis
           python -m pip install --upgrade pip
           pip install pytest coverage
