--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          sudo apt-get update gdal-bin
-          sudo apt-get install -y postgis
+          sudo apt-get update
+          sudo apt-get install -y postgis gdal-bin
           python -m pip install --upgrade pip
           pip install pytest coverage
           if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
