--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 nbsphinx==0.8.5
 sphinx-gallery==0.9.0
-nbconvert==6.0.7
+nbconvert>=6.5.0,<6.6.0
 sphinx==4.0.2
 pandoc==1.0.2
 sphinxcontrib-apidoc==0.3.0
