--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
           POSTGRES_PASSWORD: db_builder
           POSTGRES_USER: builder
           POSTGRES_DB: test
-          TZ: 'MST'
-          PGTZ: 'MST'
+          TZ: 'UTC'
+          PGTZ: 'UTC'
           POSTGIS_GDAL_ENABLED_DRIVERS: 'ENABLE_ALL'
           POSTGIS_ENABLE_OUTDB_RASTERS: 'True'
         ports:
