--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,6 +3,6 @@ sphinx-gallery==0.9.0
 nbconvert>=6.4.3,<6.5.0
 sphinx==4.0.2
 pandoc==1.0.2
-ipython==8.10.0
+ipython>7.0,<9.0
 sphinxcontrib-apidoc==0.3.0
 MarkupSafe<2.1.0
