--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,17 @@
-  version: 2
+version: 2
 
-  sphinx:
-    configuration: docs/conf.py
-    fail_on_warning: false
+sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: false
 
-  python:
-    version: 3.8
-    install:
-      - requirements: docs/requirements.txt
-      - requirements: requirements.txt
-      - method: setuptools
-        path: .
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+
+python:
+  install:
+    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
+    - method: setuptools
+      path: .
