--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9, '3.10']
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -27,9 +27,9 @@ jobs:
 
       - name: Install Macos/Linux dependencies
         run: |
-            pip install --upgrade pip setuptools wheel
-            python -m pip install -r requirements.txt
-            python setup.py install
+            python3 -m pip install --upgrade pip setuptools wheel
+            python3 -m pip install -r requirements.txt
+            python3 setup.py install
       - name: Install Validation
         run: |
             python -c "import snowexsql"
