--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9, '3.10']
 
     services:
 
@@ -44,9 +44,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y postgis gdal-bin
-          python -m pip install --upgrade pip
-          pip install pytest coverage
-          if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+          python3 -m pip install --upgrade pip
+          python3 -m pip install pytest coverage
+          if [ -f requirements_dev.txt ]; then python3 -m pip install -r requirements_dev.txt; fi
       - name: Test with pytest
         run: |
           pytest -s
