--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
             python3 -m pip install --upgrade pip setuptools wheel
             python3 -m pip install -r requirements.txt
+            python3 -m pip install -r docs/requirements.txt
             python3 -m pip install .
       - name: Install Validation
         run: |
