--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,10 @@
-nbsphinx==0.8.5
+nbsphinx==0.9.4
 sphinx-gallery==0.9.0
 nbconvert>=6.4.3,<6.5.0
-sphinx==4.0.2
+sphinx>=7.1,<7.4
 pandoc==1.0.2
 ipython>7.0,<9.0
 sphinxcontrib-apidoc==0.3.0
 MarkupSafe<2.1.0
+plotly==5.22.0
+jupyterlab==4.2.0
