--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,13 +1,11 @@
--r docs/requirements.txt
 -r requirements.txt
-pip>=22,<23
+pip==23.3
 bump2version==0.5.11
 wheel==0.38.1
 watchdog==0.9.0
 flake8==3.7.8
-coverage==4.5.4
+tox==3.14.0
+coverage==5.5
 twine==1.14.0
-pytest==6.2.3
-pytest-runner==5.1
-jupyterlab==2.2.10
-matplotlib==3.2.2
+pytest==6.2.4
+pytest-cov==2.12.1
