--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,8 +3,9 @@ include docs/contributing.rst
 include docs/history.rst
 include LICENSE
 include README.rst
+include requirements.txt
 
-recursive-include tests *
+recursive-exclude tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
