--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: Snowexsql Documentation
-author: Micah Johnson
+author: SnowExSQL Developers
 logo: logo.png
 
 # Force re-execution of notebooks on each build.
