Docs - Makefile - Update build command to match ReadTheDocs.io
Update the doc build command to match the one on ReadTheDocs.io
This should help identifying build problems before pushing to build a PR

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,8 +2,8 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    =
-SPHINXBUILD   = python -msphinx
+SPHINXOPTS    = -b html -d _build/doctrees
+SPHINXBUILD   = python -m sphinx
 SPHINXPROJ    = snowexsql
 SOURCEDIR     = .
 BUILDDIR      = _build
@@ -17,4 +17,5 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	jupyter-book config sphinx docs
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
