--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
             python3 -m pip install --upgrade pip setuptools wheel
             make clean
-            python3 -m pip install .
+            python3 -m pip install ".[dev]"
       - name: Install Validation
         run: |
             python -c "import snowexsql"
