--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt-get install -y postgis gdal-bin
           python3 -m pip install --upgrade pip
           python3 -m pip install pytest coverage
-          if [ -f requirements_dev.txt ]; then python3 -m pip install -r requirements_dev.txt; fi
+          python3 -m pip install -e ".[dev]"
       - name: Test with pytest
         run: |
           pytest -s
