--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,7 +26,7 @@ formats: []
 # Optionally set the version of Python and requirements required to build your docs
 python:
   install:
-    - requirements: docs/requirements.txt
-    - requirements: requirements.txt
-    - method: setuptools
+    - method: pip
       path: .
+      extra_requirements:
+        - docs
