Actions - Switch to use CodeCov to check test coverage
Change the workflow to get test coverage and use the CodeCov service.
This also separates the step into a dedicated CI action and independent
of the Python 3.9 test runs. Upgrading the pytest and pytest-cov package
to always use the latest.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,10 +28,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pip==23.3",
-    "coverage==5.5",
-    "pytest==6.2.4",
-    "pytest-cov==2.12.1",
+    "pytest",
+    "pytest-cov",
     "sphinx-autobuild<=2024.5",
 ]
 docs = [
