--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,12 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     branches: [ master ]
-  workflow_dispatch:
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
   build:
