Tests - Rework test database authentication info
Create a sample file to give db connection information for the test
database. This enables different setup among developers in regard to
authentication to their local test DB and where that runs.

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,12 @@ docs/_build/*
 
 **/.ipynb_checkpoints/*
 
+# Test infor
 .coverage
 coverage.xml
 htmlcov/*
-scripts/upload/test*.txt
+tests/credentials.json
+
 .idea/
 scripts/download/data/*
 *.egg-info
