--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,4 +51,5 @@ jobs:
           python3 -m pip install -e ".[dev]"
       - name: Test with pytest
         run: |
+          mv tests/credentials.json.sample tests/credentials.json
           pytest -s
