Tests - Introduce Factory-Boy to create test data.
Add the facotry-boy package along with a pytest integration. This should
make it easier to create test data for tests, especially with
relational data.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "factory_boy<4",
+    "pytest-factoryboy<3",
     "pytest",
     "pytest-cov",
     "sphinx-autobuild<=2024.5",
