package name unique

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,12 +40,8 @@ jobs:
           rm -rf dist build *.egg-info
 
       - uses: hynek/build-and-inspect-python-package@v2
-
-      - name: Upload built package artifact
-        uses: actions/upload-artifact@v3
         with:
-          name: Packages-${{ github.run_id }}
-          path: dist
+          upload-name-suffix: ${{ github.run_id }}
 
   test-built-dist:
     needs: [dist]
@@ -60,7 +56,7 @@ jobs:
           python-version: "3.10"
       - uses: actions/download-artifact@v4
         with:
-          name: Packages-${{ github.run_id }}
+          name: Packages${{ github.run_id }}
           path: dist
       - name: List contents of built dist
         run: |
