--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -107,7 +107,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          name: Packages
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@v1.12.3
