Refactor credential file handling - Create default location
Refactor the credential file lookup and look for the required file
under the project root for production or test values. This introduces
two separate sections under the central JSON file, containing both
environment values.

Co-authored-by: aaarendt <arendta@uw.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,13 @@ docs/_build/*
 
 **/.ipynb_checkpoints/*
 
-# Test infor
+# Database credential information
+credentials.json
+
+# Test related files
 .coverage
 coverage.xml
 htmlcov/*
-tests/credentials.json
 
 .idea/
 .vscode/
