--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,5 +54,5 @@ jobs:
           python3 -m pip install -e ".[dev]"
       - name: Test with pytest
         run: |
-          mv tests/credentials.json.sample tests/credentials.json
+          mv credentials.json.sample credentials.json
           pytest -s
