Tests - Match credentials file DB info to GH actions DB setup

--- a/credentials.json.sample
+++ b/credentials.json.sample
@@ -7,7 +7,7 @@
   },
   "tests": {
     "address": "localhost",
-    "db_name": "snowexsql_test",
+    "db_name": "test",
     "username": "builder",
     "password": "db_builder"
   }
