--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,14 @@
 name: Code Quality
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
     paths-ignore:
       - 'docs/**'
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - 'release-*'
     paths-ignore:
       - 'docs/**'
 jobs:
@@ -38,7 +41,9 @@ jobs:
       - name: Install dependencies
         run: python3 -m pip install -e ".[dev]"
       - name: Run tests and collect coverage
-        run: pytest --cov snowexsql --cov-report=xml
+        run: |
+          mv credentials.json.sample credentials.json
+          pytest --cov snowexsql --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
