Tests - Set pytest<8.4
Pytest 8.4 has an interface change that breaks compatibility with
factory-boy<4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
 dev = [
     "factory_boy<4",
     "pytest-factoryboy<3",
-    "pytest",
+    "pytest<8.4",
     "pytest-cov",
     "sphinx-autobuild<=2024.5",
 ]
