--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,43 +9,46 @@ license = {text = "GNU"}
 description = "SQL Database software for SnowEx data"
 keywords = ["snowex", "sql", "database", "snow"]
 readme = "README.rst"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 classifiers = [
     'Development Status :: 2 - Pre-Alpha',
     'Intended Audience :: Developers',
     'Natural Language :: English',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10'
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13'
 ]
+
 dependencies = [
-    "utm>=0.5.0,<1.0",
-    "geoalchemy2>=0.6,<1.0",
-    "geopandas>=0.7,<2.0",
-    "psycopg2-binary>=2.9.0,<2.10.0",
-    "rasterio>=1.1.5",
-    "SQLAlchemy >= 2.0.0",
+    "utm >=0.8, <0.9",
+    "geoalchemy2 >=0.18, <1.0",
+    "geopandas >=1.1, <2.0",
+    "psycopg2-binary >=2.9, <3.0",
+    "rasterio >=1.4, <2.0",
+    "SQLAlchemy >=2.0, <3.0",
 ]
+
 
 [project.optional-dependencies]
 dev = [
-    "factory_boy<4",
-    "pytest-factoryboy<3",
-    "pytest<8.4",
-    "pytest-cov",
-    "sphinx-autobuild<=2024.5",
+    "factory_boy >=3.3, <4.0",
+    "pytest-factoryboy >=2.8, <3.0",
+    "pytest >=8.4, <9.0",
+    "pytest-cov >=7.0, <8.0",
+    "sphinx-autobuild >=2024.10, <2025.0",
 ]
 docs = [
-    "ipython>7.0,<9.0",
-    "nbconvert>=6.4.3,<6.5.0",
-    "nbsphinx==0.9.4",
-    "pandoc==1.0.2",
-    "plotly==5.22.0",
-    "sphinx-gallery==0.9.0",
-    "sphinx>=7.1,<7.4",
-    "sphinxcontrib-apidoc==0.3.0",
-    "jupyter-book>=1.0.2,<1.1",
-    "pyyaml<6.1"
+    "ipython >=8.37, <9.0",
+    "nbconvert >=7.16, <8.0",
+    "nbsphinx >=0.9, <1.0",
+    "pandoc >=2.4, <3.0",
+    "plotly >=6.3, <7.0",
+    "sphinx-gallery >=0.19, <1.0",
+    "sphinx >=7.4, <8.0",
+    "sphinxcontrib-apidoc >=0.6, <1.0",
+    "jupyter-book >=1.0, <2.0",
+    "pyyaml >=6.0, <7.0"
 ]
 all = ["snowexsql[dev,docs]"]
 
