--- a/deployment/docker/requirements-lambda.txt
+++ b/deployment/docker/requirements-lambda.txt
@@ -1,6 +1,8 @@
 # Lambda-optimized requirements without heavy dependencies
 utm>=0.5.0,<1.0
 geoalchemy2>=0.6,<1.0
+shapely>=2.0.0,<3.0
+pandas>=1.5.0,<3.0
 psycopg2-binary>=2.9.0,<2.10.0
 SQLAlchemy>=2.0.0
 boto3>=1.26.0
