--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -77,6 +77,21 @@ jobs:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
         runs-on: [ubuntu-latest, macos-14]
     steps:
+
+      - uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Debug Python version
+        run: |
+          echo "Using Python version:"
+          python --version
+          which python
+
+      - name: Install GDAL (macOS)
+        if: runner.os == 'macOS'
+        run: brew install gdal
+
       - name: Check pypi packages
         run: |
           sleep 3
