--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0  # Fetch full history
-          tags: true      # Ensure tags are fetched
+          fetch-tags: true      # Ensure tags are fetched
 
       - name: Verify Git tags and current commit
         run: |
