--- a/credentials.json.sample
+++ b/credentials.json.sample
@@ -1,14 +1,6 @@
 {
-  "production": {
-    "address": "localhost",
-    "db_name": "snowexsql",
-    "username": "builder",
-    "password": "db_builder"
-  },
-  "tests": {
-    "address": "localhost",
-    "db_name": "test",
-    "username": "builder",
-    "password": "db_builder"
-  }
+  "address": "localhost",
+  "db_name": "test",
+  "username": "user",
+  "password": "password"
 }
