fix: add boto3 to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,12 @@ dependencies = [
     "psycopg2-binary <3.0",
     "rasterio <2.0",
     "SQLAlchemy <3.0",
+    "boto3 <2.0",
 ]
 
 
 [project.optional-dependencies]
+
 dev = [
     "factory_boy <4.0",
     "pytest-factoryboy <3.0",
@@ -50,7 +52,7 @@ docs = [
     "jupyter-book <2.0",
     "pyyaml <7.0"
 ]
-all = ["snowexsql[dev,docs]"]
+all = ["snowexsql[dev,docs,lambda]"]
 
 [project.urls]
 Homepage = "https://github.com/SnowEx/snowexsql"
