fix: update pytest command to exclude integration tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,4 @@ jobs:
           python3 -m pip install -e ".[dev]"
       - name: Test with pytest
         run: |
-          pytest -s
+          pytest -s -m "not integration"
