--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
         run: python3 -m pip install -e ".[dev]"
       - name: Run tests and collect coverage
         run: |
-          pytest --cov snowexsql --cov-report=xml
+          pytest --cov snowexsql --cov-report=xml -m "not integration"
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
