--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ dependencies = [
     "rasterio <2.0",
     "SQLAlchemy <3.0",
     "boto3 <2.0",
-    "requests >=2.31.0",
-    "urllib3 >=2.0",
+    "requests >=2.31.0,<3.0",
+    "urllib3 >=2.0,<3.0",
 ]
 
 
